--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
 <h1>covfefe</h1>
 <img src="http://i1.kym-cdn.com/photos/images/original/001/053/349/3fa.gif" alt="covfefe" />
+<br />
+<br />
+<br />
+<br />
+<br />
+<small>Contribute via <a href="https://github.com/redsquirrel/covfefe">Github</a></small>
