Added Twitter timeline of #covfefe search

--- a/index.html
+++ b/index.html
@@ -1,9 +1,44 @@
-<h1>covfefe</h1>
-<img src="http://i1.kym-cdn.com/photos/images/original/001/053/349/3fa.gif" alt="covfefe" />
-<img src="https://i.makeagif.com/media/1-16-2017/SfFtlD.gif" alt="covfefe" />
-<br />
-<br />
-<br />
-<br />
-<br />
-<small>Contribute via <a href="https://github.com/redsquirrel/covfefe">Github</a></small>
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Covfefe Lives</title>
+        <meta name="description" content="Covfefe Lives #covfefe">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+        <!-- Add your site or application content here -->
+        <h1>covfefe</h1>
+        <img src="http://i1.kym-cdn.com/photos/images/original/001/053/349/3fa.gif" alt="covfefe" />
+        <img src="https://i.makeagif.com/media/1-16-2017/SfFtlD.gif" alt="covfefe" />
+        <br />        
+        <div style="margin: 0px auto; text-align: center;">
+        <h2>Join the Covfefe</h2>
+        <a class="twitter-timeline"  href="https://twitter.com/hashtag/covfefe" data-widget-id="869904087856418816">#covfefe Tweets</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </div>
+        <br />
+        <br />
+        <small>Contribute via <a href="https://github.com/redsquirrel/covfefe">Github</a></small>
+
+        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!--script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script-->
+    </body>
+</html>
